2005-07-08  Roger Leigh  <rleigh@debian.org>

	* TODO: Update.

	* schroot/schroot.c (main): Use new SBUILD_AUTH casts and methods,
	to replace the corresponding SBUILD_SESSION types and methods.

	* SbuildSession derives from SbuildAuth.
	  - The duplicated functionality has been removed from
	    SbuildSession.
	  - SbuildSession overrides the SbuildAuth virtual functions
	    require_auth and session_run.

2005-07-08  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.h: Add sbuild-auth.[ch].

	* schroot/sbuild-marshallers.list: Add new marshaller
	(sbuild_cclosure_marshal_BOOLEAN__BOXED).

	* Split SbuildSession PAM functionality into a separate SbuildAuth
	class, from which SbuildSession is derived.  SbuildAuth handles
	authentication and authorisation using PAM, with hooks for
	customising its behaviour.

2005-07-07  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.h, schroot/sbuild-config.h: Make error
	quark functions publicly visible.

2005-07-07  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.c
	(entries): Make entries const, to fix compiliation with gcc-4.0.
	(parse_options): Check for parse errors, and exit on error.

2005-07-07  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-error.c, schroot/sbuild-error.h: Wrap GError as a
	GType (SBUILD_TYPE_ERROR and SBUILD_TYPE_ERROR_POINTER) for use
	with signals (GError * may be used as an "out" argument).

2005-07-05  Roger Leigh  <rleigh@debian.org>

	* po/.cvsignore: Ignore generated files.

2005-07-04  Roger Leigh  <rleigh@debian.org>

	* doc/schroot/schroot-docs.sgml: Include marshallers section.

	* doc/schroot/schroot-sections.txt: Add marshallers section.

	* schroot/schroot.h: New header.  This includes all other headers,
	and is used by glib-mkenums.

	* schroot/sbuild-marshallers.list: New file.  Generate a
	marshaller returning an enum and taking no arguments
	(sbuild_cclosure_marshal_ENUM__VOID).

	* schroot/Makefile.am: Generate GObject closure marshallers and